--- a/index_webworker.html
+++ b/index_webworker.html
@@ -7,6 +7,8 @@
   <div id="canvas">
   </div>
   <script src="js/three.min.js"></script>
-  <script src="js/main_worker.js"></script>
+  <script src="js/webcam.js"></script>
+  <script src="js/webcamstream.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
